--- a/site_responsivo/index.html
+++ b/site_responsivo/index.html
@@ -1,28 +1,41 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hope child</title>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Hope Child</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-</head>
-<body>
+  </head>
+  <body>  
+<header>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Hope Child</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
+      <div class="container-fluid">
+       
+        <a class="navbar-brand" href="#"><img src="/site_responsivo/img/sustainability.png" alt="" style="width: 90px;"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse m-4" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
-              <a class="nav-link" href="#">Features</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#sobrenos">Sobre Nos</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="#">Pricing</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-            </div>
-          </div>
+            </li>
+          </ul>
         </div>
-      </nav>
+      </div>
+    </nav>
+  </header>
+    <main>
       <div id="carouselExampleIndicators" class="carousel slide">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -31,13 +44,13 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/img/criancaesperanca.png" class="d-block w-100" alt="...">
+            <img src="/site_responsivo/img/crianca-esperanca.png" class="d-block w-100" alt="..." style="width: 100;">
           </div>
           <div class="carousel-item">
-            <img src="/img/criancaesperanca.png" class="d-block w-100" alt="...">
+            <img src="/site_responsivo/img/criancaesperanca.png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/img/criancaesperanca2.png" class="d-block w-100" alt="...">
+            <img src="/site_responsivo/img/pulseira.png" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -49,6 +62,32 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-
-</body>
+      <div class="card-group " style="margin: 12px;" id="sobrenos">
+        <div class="card">
+          <img src="/site_responsivo/img/sustainability.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Sobre nos</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="/site_responsivo/img/pulseiraeletronicacrianca.png"  style=""   class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Nosso produto</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+        <div class="card" >
+          <img src="/site_responsivo/img/criancabrincando (2).png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Como funciona</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
