--- a/site_responsivo/index.html
+++ b/site_responsivo/index.html
@@ -50,7 +50,7 @@
             <img src="/site_responsivo/img/criancaesperanca.png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/site_responsivo/img/pulseira.png" class="d-block w-100" alt="...">
+            <img src="/site_responsivo/img/crianca-esperanca-_1_.png" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -103,7 +103,7 @@
           </div>
         </div>
         <div class="card" >
-          <img src="/site_responsivo/img/criancabrincando (2).png" class="card-img-top" alt="...">
+          <img src="/site_responsivo/img/pulseiracriancanew.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Como funciona</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
